crates/rargs/tests/snapshots/test_scripts__impl-91.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] commands-nested.sh dir -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Directory commands

[4mUsage:[0m
  dir [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  dir -h|--help
  dir -v|--version

[4mCommands:[0m
  list ...... Show files in the directory
  remove .... Remove directory

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

